# dovecot-mbc

./: .gitignore  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  configure.in  dovecot-mbc.1.in  mbc-plugin.c  mbc-plugin.h  mbc_set_acl.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
conf/: 90-mbc.conf  90-mbc.conf.dist
contrib/: configure.ac  mbc_script.sh  mbc_script.sh.dist
contrib/autom4te.cache/: output.0  requests  traces.0
man/: dovecot-mbc.1.in
src/: mbc-log.cpp  mbc-log.h  mbc-plugin.c  mbc-plugin.h
